# outlit-sdk

./: .eslintrc.js  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  bunfig.toml  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  release-plz.toml  skills-lock.json  tsconfig.json  turbo.json  vitest.config.ts
.changeset/: README.md  add-client-prop.md  add-integrations-commands.md  add-outlit-sdk-skill-and-auto-install.md  add-past-due-billing-status.md  add-setup-skills-command.md  add-typesversions-support.md  agent-notification-destinations.md  agent-onboarding-cli.md  agent-platform-actions-cli.md  better-dryers-cut.md  brave-owls-drive.md  bright-activation-events.md  bright-worms-try.md  calendar-tools-contract.md  canonical-timeline-channels.md  cleaner-stub-snippet.md  cleanup-exit-handlers.md  cli-fixes.md  cli-improvements.md  cli-version-flag.md  cold-hotels-prove.md  common-adults-wonder.md  config.json  consent-management.md  crm-opportunity-source-normalization.md  curly-maps-serve.md  curvy-moose-punch.md  custom-agent-unified-instructions.md  customer-identified-sdk-tracking.md  early-cooks-drive.md  eight-humans-rest.md  few-badgers-compile.md  five-calm-opportunities.md  five-pandas-sniff.md  fix-track-customertraits-payload-identity.md  fix-type-memory.md  (+47 more)
crates/outlit/: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  release.toml
crates/outlit/src/: builders.rs  client.rs  config.rs  error.rs  lib.rs  queue.rs  transport.rs  types.rs
crates/outlit/tests/: integration.rs  payload_compatibility.rs
(+110 files in other folders)
